finished spring aspect loggin, industry but yet to finalise category